
noinst_LTLIBRARIES = libcore.la
libcore_la_SOURCES = \
  debug/breakpoint.c \
  debug/gdb.c \
  debug/string.c \
  mm/heap.c \
  mm/phys.c \
  mm/virt.c \
  syscall/interrupt/acquire.c \
  syscall/interrupt/release.c \
  syscall/message/async/receive.c \
  syscall/message/async/send.c \
  syscall/message/sync/receive.c \
  syscall/message/sync/send.c \
  syscall/message/acquire.c \
  syscall/message/release.c \
  syscall/mm/acquire.c \
  syscall/mm/release.c \
  syscall/mm/shared/acquire.c \
  syscall/mm/shared/create.c \
  syscall/mm/shared/extend.c \
  syscall/mm/shared/release.c \
  syscall/task/process_id.c \
  syscall/task/thread_id.c \
  syscall/dummy.c \
  syscall/init.c \
  task/lock.c \
  task/process.c \
  task/queue.c \
  task/stack.c \
  task/thread.c \
  bss.c \
  cpu.c \
  elf.c \
  event.c \
  initrd.c \
  interrupt.c \
  main.c \
  panic.c
